Sun Oct  4 17:55:52 CDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* gtk/gtkcalendar.h:
	  gtk/gtkcalendar.c: Some significant changes, including:
	  - No longer draw focus around entire widget, only around
	    the day which has focus
	  - Draw relief around entire widget like originally planned
	  - Show header and day names by default 
	  - Move data private to the widget out of GtkCalendar struct
	    and only point to it with a gpointer
	  - Remove some old unused variables from GtkCalendar struct

Sun Oct  4 17:45:43 BST 1998  Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml: update I've had sat around:
	  - Grammar patch from James R. Van Zandt <jrv@vanzandt.mv.com>
	  - Range Widget update from David Huggins-Daines <bn711@freenet.carleton.ca>
	  - New Toolbar section from Jacek Wojdel <J.C.Wojdel@cs.tudelft.nl>

1998-10-01  Martin Baulig  <martin@home-of-linux.org>

	* gtk/gtkclist.h (GtkCListColumn): Added `visible'.
	
	* gtk/gtkclist.c (gtk_clist_set_column_visibility): New function.
	Makes it possible to individually show and hide columns.
	(size_allocate_columns): Adapted to keep track of hidden columns.
	(size_allocate_title_buttons): Likewise.

Sat Oct  3 17:54:48 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkargcollector.c (GTK_ARG_COLLECT_VALUE): for unknown foreign
	fundamental types, collect an argument of the type returned from
	gtk_type_get_varargs_type(). removed the first macro argument which
	was just the same as the fundamental type of the *arg passed to
	the macro.
	* gtk/gtkarg.c (gtk_args_collect): 
	* gtk/gtksignal.c (gtk_signal_collect_params): changed callers.

	* gtk/gtktypeutils.h: 
	* gtk/gtktypeutils.c: new functions gtk_type_set_varargs_type() and
	gtk_type_get_varargs_type() to set and query the varargs collect
	type used for a fundamental type, registered outside of Gtk.

	* gtk/gtkmisc.c (gtk_misc_class_init): changed object arguments
	GtkMisc::xalign and GtkMisc::yalign from GTK_TYPE_DOUBLE to
	GTK_TYPE_FLOAT.
